--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^5.4.6"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
-  "license": "ISC",
+  "author": "GoIT@2024 - team-1",
+  "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.7",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
